# steam-qt-keyboard-plugin

./: AutoShow.py  CMakeLists.txt  PKGBUILD  README.md  setup.py  steamkeyboardlauncher.py
data/: steamdeckkeyboardlauncher.desktop
flatpak/: org.kde.PlatformInputContexts.Steam.appdata.xml  org.kde.PlatformInputContexts.Steam.yml
gtk/: steam-imcontext-gtk.c  steam-imcontext-gtk.h  steam-imcontext-plugin.c
gtk3/: CMakeLists.txt  steam-imcontext-gtk.h
gtk4/: CMakeLists.txt  steam-imcontext-gtk.c  steam-imcontext-gtk.h
kcm/: .kcm_kdesteamsettings.json.kate-swp  CMakeLists.txt  Messages.sh  kcm_kdesteamsettings.json  kcmkdesteamsettings.cpp  kcmkdesteamsettings.h  kcmkdesteamsettingswidget.ui  kdesteam.kcfg  kdesteamsettings.kcfgc
kded/: CMakeLists.txt  keyboardmodule.cpp  keyboardmodule.h  keyboardmodule.json
qt/: CMakeLists.txt  steaminputcontext.cpp  steaminputcontext.h  steaminputcontext.json
src/: CMakeLists.txt  main.cpp  steaminputcontext.cpp  steaminputcontext.h
steamdeckkeyboardlauncher/: AtspiStateTracker.py  AutoShow.py  Config.py  Timer.py  __init__.py  utils.py
